@@ -15,6 +15,7 @@ Eric Hanchrow <erich@microsoft.com>
 Heiko Schroeder <heiko@pool.informatik.rwth-aachen.de>
 Klaus Reichl <klaus.reichl@alcatel.at>
 Kunihiro Ishiguro <kunihiro@zebra.org>
+Mark Lundeberg <aa026@pgfn.bc.ca>
 Miles Bader <miles@gnu.org>
 OKUJI Yoshinori <okuji@kuicr.kyoto-u.ac.jp>
 Pavel Roskin <pavel_roskin@geocities.com>
